--- a/Poster.ipynb
+++ b/Poster.ipynb
@@ -442,7 +442,7 @@
     "print(len(tweets))\n",
     "vectorizer = TfidfVectorizer(min_df = 200,stop_words='english') \n",
     "train_bow = vectorizer.fit_transform(tweets)\n",
-    "print(\"Tamaño de los datos depues de aplicar TF-IDF : \",train_bow.shape)"
+    "print(train_bow.shape)"
    ]
   },
   {
@@ -1714,6 +1714,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95f053bc",
+   "metadata": {},
+   "source": [
+    "Al ser no supervisado, solo tendremos la columna target en el conjunto de entrenamiento(y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "84a5a92e",
@@ -2219,6 +2227,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "901b0b52",
+   "metadata": {},
+   "source": [
+    "La mejor iteracion ha sido la de 41 dimensiones, la usaremos en la regresion logistica."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 125,
    "id": "b9a7769a",
@@ -2650,6 +2666,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23eb62d3",
+   "metadata": {},
+   "source": [
+    "Necesitamos obtener otro conjunto diferente de train y otro de test "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 126,
    "id": "1235250b",
@@ -2736,6 +2760,14 @@
    "metadata": {},
    "source": [
     "# Perceptron simple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e12d63f9",
+   "metadata": {},
+   "source": [
+    "Volvemos a generar otros conjuntos de train y test para el perceptron simple con tf-idf."
    ]
   },
   {
